--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "New Year / New Me",
-  "short_name": "NYNM",
+  "name": "2026 New Year Challenge",
+  "short_name": "2026 NY Challenge",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#000000",
